--- a/hackuniversity-onestopform-1.html
+++ b/hackuniversity-onestopform-1.html
@@ -45,8 +45,12 @@
         <span aria-hidden="true"> / </span>
         Membership
       </p>
+    <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform-1.html" class="underline hover:no-underline">Hack University</a>
+        <span aria-hidden="true"> / </span>
+        OneStop Form Registration
+      </p>
       <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
-        Membership & Certificates
+        Current Members or Registered Hackathon Participants 
       </h1>
       <p class="mt-2 text-gray-600 max-w-2xl">
         Verify your OneStopForm email to unlock certificate download and community access (Discord & GroupMe).
