--- a/HACK-2-305-HACK-SPRING2025.html
+++ b/HACK-2-305-HACK-SPRING2025.html
@@ -2269,8 +2269,8 @@ body {
         <p style="color: #555; font-size: 16px;"><strong>Location:</strong> Graham Center (GC), Florida International University</p>
         <p style="color: #555; font-size: 16px;"><strong>Address:</strong> 11200 SW 8th St, Miami, FL 33199</p>
       </div>
-  
-      <a href="cc-305-spr-25-agenda.html" target="_blank" style="display: inline-block; padding: 12px 24px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; font-size: 16px; font-weight: 600; border-radius: 8px; text-decoration: none; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: background 0.3s ease;">
+
+      <a href="https://codecrunchglobal.vercel.app/HACK-2-305-HACK-SPRING2025-agenda.html" target="_blank" style="display: inline-block; padding: 12px 24px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; font-size: 16px; font-weight: 600; border-radius: 8px; text-decoration: none; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: background 0.3s ease;">
         📄 View Full Agenda Document
       </a>
   
