--- a/hackuniversitydonate.html
+++ b/hackuniversitydonate.html
@@ -79,15 +79,53 @@
     @media (max-width:768px){
       .cta{flex-direction:column}
     }
+
+
+    /* NAVBAR (same as your previous, now naturally full-width) */
+    .navbar1 { background:#fff; border-bottom:1px solid #e8eaed; padding:12px 0; position:sticky; top:0; z-index:1000; }
+    .nav-container1 { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:0 20px; }
+    .nav-brand1 { font-size:22px; font-weight:500; color:#4285f4; }
+    .nav-links1 { display:flex; gap:30px; }
+    .nav-link1 { color:#5f6368; text-decoration:none; font-weight:400; font-size:14px; padding:8px 16px; border-radius:4px; transition:.2s; }
+    .nav-link1:hover { color:#1a73e8; background:#f1f3f4; }
+    @media (max-width:768px){
+      .nav-container1{ flex-direction:column; gap:12px; }
+      .nav-links1{ flex-wrap:wrap; justify-content:center; gap:8px; }
+      .nav-link1{ font-size:11px; padding:6px 10px; white-space:nowrap; }
+    }
+    @media (max-width:480px){
+      .nav-link1{ font-size:10px; padding:5px 8px; }
+    }
+
+
   </style>
 </head>
 <body>
+
+  <!-- NAV OUTSIDE -->
+  <nav class="navba1">
+    <div class="nav-container1">
+      <!-- <div class="nav-brand1">
+        <a href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener"><strong>Hack University Initiative</strong></a>
+      </div> -->
+      <div class="nav-links1">
+        <a href="https://codecrunchglobal.vercel.app/" class="nav-link1">Code Crunch Worldwide</a>
+        <a href="https://colorstackatfiu.vercel.app/" class="nav-link1">ColorStack at FIU</a>
+        <a href="https://cahsiatfiu.vercel.app/" class="nav-link1">CAHSI at FIU</a>
+        <a href="https://gdgatfiu.vercel.app/" class="nav-link1">Google Developer Group at FIU</a>
+        <a href="https://raspberrypicodecrunch.vercel.app/" class="nav-link1">Raspberry Pi Code Crunch</a>
+        <!-- <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link1">Support Us</a> -->
+      </div>
+    </div>
+
+
+
   <div class="bg-pattern"></div>
 
   <!-- Nav -->
   <nav class="navbar">
     <div class="nav-container">
-      <a class="nav-logo" href="#">Code Crunch</a>
+      <a class="nav-logo" href="https://hackuniversity.vercel.app/">Hack University Initiative</a>
       <ul class="nav-menu">
         <li><a href="#about">About</a></li>
         <li><a href="#format">Format</a></li>
@@ -112,9 +150,9 @@
 
   <div class="container">
     <header>
-      <div class="badge">CODE CRUNCH HACKATHONS 2025–2026 PROSPECTUS</div>
+      
       <h1>Donate & Sponsor</h1>
-      <p class="subtitle">Fuel monthly student hackathons that build real-world tech, mentorship, and careers across AI, Cloud, Cybersecurity, DevOps, Blockchain, XR & Web3.</p>
+      <p class="subtitle">Fuel monthly student hackathons open to all majors — where creators, coders, designers, and innovators build real-world tech, mentorship, and career opportunities across AI, Cloud, Cybersecurity, DevOps, Blockchain, XR, and Web3. Students from every background — business, design, engineering, health, and the arts — collaborate to turn ideas into impact through hands-on learning and industry mentorship.</p>
 
       <div class="contact-strip">
         <span class="chip">📧 codecrunchclub@gmail.com</span>
