--- a/hackuniversitydonate.html
+++ b/hackuniversitydonate.html
@@ -258,7 +258,7 @@
         </ul>
         <div class="cta">
           <a class="btn btn-primary" href="https://docs.google.com/document/d/1fiMPj6baHyA9dEk74JuJmQxj_n7d6fJy_OlUBFyAaeE/edit?usp=sharing" target="_blank" rel="noopener">📘 View the Code Crunch Donations Guide</a>
-          <a class="btn btn-outline" href="https://www.linkedin.com/company/code-crunch-club" target="_blank" rel="noopener">💬 Message Us on LinkedIn</a>
+          <!-- <a class="btn btn-outline" href="https://www.linkedin.com/company/code-crunch-club" target="_blank" rel="noopener">💬 Message Us on LinkedIn</a> -->
         </div>
         <p class="note">Donations sustain hackathons and student success year-round.</p>
       </section>
@@ -268,8 +268,8 @@
         <h2>⭐ 05 — Sponsorship: Optional Event Partnership</h2>
         <p class="muted">
           Email <strong>codecrunchclub@gmail.com</strong> to set up a sponsorship agreement.
-          You can review details and confirm your tier in our Google Doc:
-          <a href="https://docs.google.com/document/d/1fiMPj6baHyA9dEk74JuJmQxj_n7d6fJy_OlUBFyAaeE/edit?usp=sharing" target="_blank" rel="noopener"><strong>Code Crunch Donations & Sponsorship Guide</strong></a>.
+          You can review details and confirm your sponsorship level by tier below or in our:
+          <a href="https://codecrunchglobal.vercel.app/cc-prospectus.html" target="_blank" rel="noopener"><strong>PROSPECTUS / Sponsorship Org. Package</strong></a>.
         </p>
 
         <!-- Quick Tier Picker -->
@@ -286,7 +286,7 @@
             </ul> -->
             <div class="tier-cta">
               <!-- <a class="primary" href="mailto:codecrunchclub@gmail.com?subject=Bronze%20Sponsorship%20($1.5K)" aria-label="Email to Sponsor Bronze">Choose Bronze</a> -->
-              <a class="outline" href="https://docs.google.com/document/d/1fiMPj6baHyA9dEk74JuJmQxj_n7d6fJy_OlUBFyAaeE/edit?usp=sharing" target="_blank" rel="noopener">Open Google Doc</a>
+              <a class="outline" href="https://codecrunchglobal.vercel.app/cc-prospectus.html" target="_blank" rel="noopener">Open PROSPECTUS / Sponsorship Org. Package</a>
             </div>
           </div>
 
@@ -302,7 +302,7 @@
             </ul> -->
             <div class="tier-cta">
               <!-- <a class="primary" href="mailto:codecrunchclub@gmail.com?subject=Silver%20Sponsorship%20($3K)" aria-label="Email to Sponsor Silver">Choose Silver</a> -->
-              <a class="outline" href="https://docs.google.com/document/d/1fiMPj6baHyA9dEk74JuJmQxj_n7d6fJy_OlUBFyAaeE/edit?usp=sharing" target="_blank" rel="noopener">Open Google Doc</a>
+              <a class="outline" href="https://codecrunchglobal.vercel.app/cc-prospectus.html" target="_blank" rel="noopener">Open PROSPECTUS / Sponsorship Org. Package</a>
             </div>
           </div>
 
@@ -318,14 +318,14 @@
             </ul> -->
             <div class="tier-cta">
               <!-- <a class="primary" href="mailto:codecrunchclub@gmail.com?subject=Gold%20Sponsorship%20($5.5K)" aria-label="Email to Sponsor Gold">Choose Gold</a> -->
-              <a class="outline" href="https://docs.google.com/document/d/1fiMPj6baHyA9dEk74JuJmQxj_n7d6fJy_OlUBFyAaeE/edit?usp=sharing" target="_blank" rel="noopener">Open Google Doc</a>
+              <a class="outline" href="https://codecrunchglobal.vercel.app/cc-prospectus.html" target="_blank" rel="noopener">Open PROSPECTUS / Sponsorship Org. Package</a>
             </div>
           </div>
         </div>
 
         <!-- Detailed Comparison Table -->
         <!-- <h3 style="margin:14px 0 10px">📍 Hackathons w/ Organization Sponsorship Packages</h3> -->
-        <div class="table-wrap">
+        <!-- <div class="table-wrap">
           <table>
             <thead>
               <tr>
@@ -334,7 +334,7 @@
                 <th>🥈 Silver ($3K)</th>
                 <th>🥇 Gold ($5.5K)</th>
               </tr>
-            </thead>
+            </thead> -->
             <!-- <tbody>
               <tr><td><strong>Organization Social Media Recognition</strong></td><td>✅</td><td>✅</td><td>✅</td></tr>
               <tr>
@@ -392,10 +392,11 @@
           <div class="kpi"><strong>🌐</strong> <a href="https://CodeCrunch.cs.fiu.edu" target="_blank" rel="noopener">CodeCrunch.cs.fiu.edu</a></div>
           <div class="kpi"><strong>📱</strong> Instagram: @codecrunchclub</div>
         </div>
-        <div class="cta" style="margin-top:14px">
+        <!-- <div class="cta" style="margin-top:14px">
           <a class="btn btn-primary" href="https://docs.google.com/document/d/1fiMPj6baHyA9dEk74JuJmQxj_n7d6fJy_OlUBFyAaeE/edit?usp=sharing" target="_blank" rel="noopener">📘 Donations & Sponsorship Guide</a>
           <a class="btn btn-outline" href="https://www.linkedin.com/company/code-crunch-club" target="_blank" rel="noopener">💬 Connect on LinkedIn</a>
-        </div>
+        
+        </div> -->
       </section>
     </main>
 
