--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -156,7 +156,7 @@
     <main class="container">
       <h1 class="page-title">Hack University — OneStop Form</h1>
       <p class="page-subtitle">
-        One place to join our communities, register for upcoming hackathons, and sync important dates to your calendar.
+        One place to join our organizations, communities platforms, register for upcoming hackathons, and sync important dates to your calendar.
       </p>
 
       <nav class="quick-links" aria-label="Quick links">
