--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -546,7 +546,7 @@
     // 4) fallback: from dates
     const hackathons = [
       {
-        name: '🪖 305 Hackathon: Edition Nov 2025 (Online)',
+        name: '🪖 305 Hackathon: Edition Nov 2025 - Session A (Online)',
         theme: 'Theme: Veterans & DefenseTech',
         startDate: '2025-11-07',
         endDate:   '2025-11-15',
@@ -555,7 +555,7 @@
         url: 'https://305hacknov2025.vercel.app/'
       },
       {
-        name: '🪖 305 Hackathon: Edition Nov 2025 (In-Person)',
+        name: '🪖 305 Hackathon: Edition Nov 2025 - Session B (In-Person)',
         theme: 'Theme: Veterans & DefenseTech',
         startDate: '2025-11-15',
         endDate:   '2025-11-15',
