--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -228,9 +228,10 @@
   <nav class="navbar" role="navigation" aria-label="Main navigation">
     <div class="nav-container">
       <div class="nav-brand">
-        <a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener"><strong>Code Crunch</strong></a>
+        <a href="https://hackuniversity.vercel.app" target="_blank" rel="noopener"><strong>Hack University Initiative</strong></a>
       </div>
       <div class="nav-links">
+        <a href="https://codecrunchglobal.vercel.app" class="nav-link" target="_blank" rel="noopener">Code Crunch Worldwide</a>
         <a href="https://colorstackatfiu.vercel.app/" class="nav-link" target="_blank" rel="noopener">ColorStack at FIU</a>
         <a href="https://cahsiatfiu.vercel.app/" class="nav-link" target="_blank" rel="noopener">CAHSI at FIU</a>
         <a href="https://gdgatfiu.vercel.app/" class="nav-link" target="_blank" rel="noopener">Google Developer Group at FIU</a>
