--- a/hackuniversity-onestopform-1.html
+++ b/hackuniversity-onestopform-1.html
@@ -25,94 +25,36 @@
     #cert-status.error   { background:linear-gradient(135deg,#fee2e2 0%,#fecaca 100%); color:#991b1b; border-color:#fca5a5; }
   
   
- /* 
- navbar styles
- 
- 
- */
+     /* Header above the card */
+    .site-header {
+      width:100%;
+      /* background:#f8fafc;
+      border-bottom:1px solid #e5e7eb; */
+    }
+    .site-header-inner {
+      max-width:1200px;
+      margin:0 auto;
+      padding: 14px 20px;
+    }
 
 
-   /* Base navbar styles */
-.navbar {
-  background:#fff;
-  border-bottom:1px solid #e8eaed;
-  padding:12px 0;
-  position:sticky;
-  top:0;
-  z-index:1000;
-}
+    .crumbs {
+      font-size: 12px;
+      color:#6b7280;
+    }
 
-.nav-container {
-  max-width:1200px;
-  margin:0 auto;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:0 20px;
-}
 
-.nav-brand {
-  font-size:22px;
-  font-weight:500;
-  color:#4285f4;
-}
-
-.nav-links {
-  display:flex;
-  gap:30px;
-}
-
-.nav-link {
-  color:#5f6368;
-  text-decoration:none;
-  font-weight:400;
-  font-size:14px;
-  padding:8px 16px;
-  border-radius:4px;
-  transition:.2s;
-}
-
-.nav-link:hover {
-  color:#1a73e8;
-  background:#f1f3f4;
-}
-
-/* Responsive tweaks used in your page */
-@media (max-width:768px){
-  .nav-container{ flex-direction:column; gap:12px; }
-  .nav-links{ flex-wrap:wrap; justify-content:center; gap:8px; }
-  .nav-link{ font-size:11px; padding:6px 10px; white-space:nowrap; }
-}
-@media (max-width:480px){
-  .nav-link{ font-size:10px; padding:5px 8px; }
-}
-
- /* 
- navbar styles end
- 
- 
- */
-
+         /* NAVBAR (same as your previous, now naturally full-width) */
+    .navbar { background:#fff; border-bottom:1px solid #e8eaed; padding:12px 0; position:sticky; top:0; z-index:1000; }
+    .nav-container { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:0 20px; }
+    .nav-brand { font-size:22px; font-weight:500; color:#4285f4; }
+    .nav-links { display:flex; gap:30px; }
+    .nav-link { color:#5f6368; text-decoration:none; font-weight:400; font-size:14px; padding:8px 16px; border-radius:4px; transition:.2s; }
+    .nav-link:hover { color:#1a73e8; background:#f1f3f4; }
   </style>
 </head>
-
-
-
-
-
 <body class="bg-white text-gray-900">
-  <!-- Navigation Header -->
-   <!-- 
-  works with 
-        /*  
-        
-        navbar styles 
-
-         */ 
-
-         no JavaScript needed
-         -->
-  <!-- NAV OUTSIDE -->
+    <!-- NAV OUTSIDE -->
   <nav class="navbar">
     <div class="nav-container">
       <div class="nav-brand">
@@ -127,12 +69,9 @@
         <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
       </div>
     </div>
-<!-- Navigation Header ends -->
-
-
-    <!-- Page Title / Hero -->
-  <header class="w-full bg-gray-50 border-b border-gray-200">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+      <!-- HEADER OUTSIDE -->
+  <header class="site-header">
+    <div class="site-header-inner">
       <p class="text-xs sm:text-sm text-gray-500 mb-2">
         <!-- 1st page -->
         <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
@@ -142,11 +81,24 @@
         
          <!-- current page -->
         <span aria-hidden="true"> / </span>
-        Current Members or Registered Hackathon Participants 
+        Members or Registered Hackathon Participants 
+      </p>
+    </div>
+  </header>
+  </nav>
+
+
+
+  
+
+    <!-- Page Title / Hero -->
+  <header class="w-full bg-gray-50 border-b border-gray-200">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+
 
       <!-- page title -->
       <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
-        Current Members or Registered Hackathon Participants 
+        Members or Registered Hackathon Participants 
       </h1>
       <p class="mt-2 text-gray-600 max-w-2xl">
         Verify your OneStopForm email to unlock certificate download and community access (Discord & GroupMe).
