--- a/hackuniversity-onestopform-1.html
+++ b/hackuniversity-onestopform-1.html
@@ -25,80 +25,28 @@
     #cert-status.error   { background:linear-gradient(135deg,#fee2e2 0%,#fecaca 100%); color:#991b1b; border-color:#fca5a5; }
   
   
-     /* Header above the card */
-    .site-header {
-      width:100%;
-      /* background:#f8fafc;
-      border-bottom:1px solid #e5e7eb; */
-    }
-    .site-header-inner {
-      max-width:1200px;
-      margin:0 auto;
-      padding: 14px 20px;
-    }
 
 
-    .crumbs {
-      font-size: 12px;
-      color:#6b7280;
-    }
-
-
-         /* NAVBAR (same as your previous, now naturally full-width) */
-    .navbar { background:#fff; border-bottom:1px solid #e8eaed; padding:12px 0; position:sticky; top:0; z-index:1000; }
-    .nav-container { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:0 20px; }
-    .nav-brand { font-size:22px; font-weight:500; color:#4285f4; }
-    .nav-links { display:flex; gap:30px; }
-    .nav-link { color:#5f6368; text-decoration:none; font-weight:400; font-size:14px; padding:8px 16px; border-radius:4px; transition:.2s; }
-    .nav-link:hover { color:#1a73e8; background:#f1f3f4; }
   </style>
 </head>
+
+
+
+
+
 <body class="bg-white text-gray-900">
-    <!-- NAV OUTSIDE -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="nav-brand">
-        <a href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener"><strong>Hack University Initiative</strong></a>
-      </div>
-      <div class="nav-links">
-                <a href="https://codecrunchglobal.vercel.app/" class="nav-link">Code Crunch Worldwide</a>
-        <a href="https://colorstackatfiu.vercel.app/" class="nav-link">ColorStack at FIU</a>
-        <a href="https://cahsiatfiu.vercel.app/" class="nav-link">CAHSI at FIU</a>
-        <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
-        <a href="https://raspberrypicrunch.vercel.app/" class="nav-link">Raspberry Pi Code Crunch</a>
-        <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
-      </div>
-    </div>
-      <!-- HEADER OUTSIDE -->
-  <header class="site-header">
-    <div class="site-header-inner">
-      <p class="text-xs sm:text-sm text-gray-500 mb-2">
-        <!-- 1st page -->
-        <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
-         <!-- next page -->       
-        <span aria-hidden="true"> / </span>
-        <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" class="underline hover:no-underline">OneStop Form Registration</a>
-        
-         <!-- current page -->
-        <span aria-hidden="true"> / </span>
-        Members or Registered Hackathon Participants 
-      </p>
-    </div>
-  </header>
-  </nav>
 
-
-
-  
 
     <!-- Page Title / Hero -->
   <header class="w-full bg-gray-50 border-b border-gray-200">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-
-
-      <!-- page title -->
+      <p class="text-xs sm:text-sm text-gray-500 mb-2">
+        <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
+        <span aria-hidden="true"> / </span>
+        Membership
+      </p>
       <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
-        Members or Registered Hackathon Participants 
+        Membership & Certificates
       </h1>
       <p class="mt-2 text-gray-600 max-w-2xl">
         Verify your OneStopForm email to unlock certificate download and community access (Discord & GroupMe).
