--- a/hackuniversity-onestopform-1 copy.html
+++ b/hackuniversity-onestopform-1 copy.html
@@ -279,16 +279,15 @@
     <p class="text-xs sm:text-sm text-gray-500 mb-2">
       <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
       <span aria-hidden="true"> / </span>
-      305 Hackathon Edition — November 2025
+      Members, Registered Hackathon Participants & Membership Certificates
     </p>
     <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
       <!-- CUSTOMIZE THIS TITLE -->
-      Membership &amp; Registration — 305 Hackathon (Nov 2025)
+      Members, Registered Hackathon Participants & Membership Certificates
     </h1>
     <p class="mt-2 text-gray-600 max-w-2xl">
       <!-- CUSTOMIZE THIS DESCRIPTION -->
-      Verify your organization email and register below. After submitting, you'll be redirected to the 305 Hackathon November 2025 site with your details for perks, updates, and check-in.
-    </p>
+    Verify your OneStopForm email to unlock certificate download and community access (Discord & GroupMe).    </p>
   </div>
 </header>
 
