--- a/hackuniversity-onestopform-1.html
+++ b/hackuniversity-onestopform-1.html
@@ -287,7 +287,7 @@
     </h1>
     <p class="mt-2 text-gray-600 max-w-2xl">
       <!-- CUSTOMIZE THIS DESCRIPTION -->
-    Verify your OneStopForm email to unlock certificate download and community access (Discord & GroupMe).    </p>
+    Verify your OneStopForm with Gmail/Google account to unlock certificate download and community access (Discord & GroupMe).    </p>
   </div>
 </header>
 
@@ -393,7 +393,7 @@
             type="submit"
             class="w-full cc-blue text-white px-8 py-4 rounded-md hover:bg-blue-700 transition-colors font-bold text-lg disabled:opacity-50 disabled:cursor-not-allowed"
           >
-            🏆 Get Certificate & Community Access
+            🏆 Sign in
           </button>
 
           <!-- Status Message (accessibility: live region) -->
