--- a/hackuniversity-navbar.html
+++ b/hackuniversity-navbar.html
@@ -11,10 +11,15 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet"/>
 
   <style>
-/* ======= Mobile-first adjustments ======= */
-/* Navigation Header CSS - Code Crunch */
+/* 
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet"/>
 
 
+*/
+
+/* Navigation Header CSS -  */
 /* Navigation Styles */
 .navbar { 
   background: #fff; 
@@ -166,7 +171,8 @@
     padding: 5px 8px;
   }
 }
-
+/* 
+End of navigation CSS */
   </style>
 </head>
 <body>
@@ -177,14 +183,15 @@
 <nav class="navbar">
   <div class="nav-container">
     <div class="nav-brand">
-      <a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener">
-        <strong>Code Crunch</strong>
+      <a href="https://hackuniversity.vercel.app" target="_blank" rel="noopener">
+        <strong>Hack University Initiative</strong>
       </a>
     </div>
     <div class="nav-links">
+      <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
+      <a href="https://codecrunchglobal.vercel.app/" class="nav-link">Code Crunch Worldwide</a>
       <a href="https://colorstackatfiu.vercel.app/" class="nav-link">ColorStack at FIU</a>
       <a href="https://cahsiatfiu.vercel.app/" class="nav-link">CAHSI at FIU</a>
-      <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
       <a href="https://raspberrypicrunch.vercel.app/" class="nav-link">Raspberry Pi Code Crunch</a>
       <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
     </div>
@@ -213,11 +220,8 @@
 
 
 
-    <script>
-       
-
-
-
+<script>
+   
 // Navigation JavaScript Enhancements
 document.addEventListener('DOMContentLoaded', function() {
   
