--- a/hackuniversity-footer.html
+++ b/hackuniversity-footer.html
@@ -18,7 +18,7 @@
         
         .card-hover:hover {
             transform: translateY(-5px);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
         }
         
         .partner-logo {
