--- a/hackuniversitydonate.html
+++ b/hackuniversitydonate.html
@@ -412,18 +412,29 @@
       <!-- 01 About -->
       <section id="about" class="card">
         <h2>01 — About Code Crunch Hackathons</h2>
-        <ul class="dotlist">
-          <li><strong>Build real-world tech</strong> in AI, Cloud, Cybersecurity, DevOps, Blockchain, XR & Web3</li>
-          <li><strong>Collaborate</strong> through industry mentorship & workshops</li>
-          <li><strong>Compete</strong> in the Tech Unicorn Challenge (Shark Tank style)</li>
-          <li><strong>Develop</strong> leadership & entrepreneurial skills</li>
-        </ul>
+
+          <p class="mt-2 text-gray-600 max-w-2xl">
+  Hack University hackathons are problem-solving competitions that tackle challenges from interdisciplinary areas and feature two main tracks:<br>
+  • <strong>Tech challenge</strong> (coding/development) - <em>Example: Build an AI-powered study group app</em><br>
+  • <strong>Technopreneurship challenge</strong> (<strong>no code</strong> - business pitch only) - <em>Example: Pitch a sustainable campus delivery service</em><br><br>
+</p>
+
+         <p class="mt-2 text-gray-600 max-w-2xl">
+  Hack University events allow students to:<br>
+  • <strong>Build real-world tech</strong> in AI, Cloud, Cybersecurity, DevOps, Blockchain, XR & Web3<br>
+  • <strong>Collaborate</strong> through industry mentorship & workshops<br>
+  • <strong>Compete</strong> in the Tech challenge & Technopreneurship challenge (Shark Tank style)<br>
+  • <strong>Develop</strong> leadership & entrepreneurial skills<br>
+  • <strong>Network</strong> with peers & professionals<br>
+
+</p>
+
         <p class="muted" style="margin-top:8px">Each hackathon is part of the Tech Unicorn Challenge Pitch where teams build disruptive technologies that drive real-world change.</p>
       </section>
 
       <!-- Standard Format -->
       <section id="format" class="card">
-        <h2>🔄 Standard Hackathon Format</h2>
+        <h2>01.1 Standard Hackathon Format</h2>
         <p class="muted">Every hackathon includes 2 structured sessions (Challenges for all Majors & No-Code Track <em>[Tech Unicorn]</em> ).</p>
         <div class="table-wrap" style="margin-top:12px">
           <table>
@@ -496,7 +507,7 @@
 
       <!-- 04 Donations -->
       <section id="donations" class="card">
-        <h2>✅ 04 — Donations: Best Way to Support Students</h2>
+        <h2>04 — Donations: Best Way to Support Students</h2>
         <ul class="dotlist">
           <li>Hardware & cloud credits</li>
           <li>Operational logistics (food, venue, staffing)</li>
@@ -512,7 +523,7 @@
 
       <!-- 05 Sponsorship -->
       <section id="sponsorship" class="card">
-        <h2>⭐ 05 — Sponsorship: Optional Event Partnership</h2>
+        <h2>05 — Sponsorship: Optional Event Partnership</h2>
         <p class="muted">
           Email <strong>codecrunchclub@gmail.com</strong> to set up a sponsorship agreement.
           You can review details and confirm your sponsorship level by tier below or in our:
